# minesweeper

./: CMakeLists.txt  Makefile  README.md
include/: board.h  board.hpp  cli.hpp  rng.h  rng.hpp  timer.h  timer.hpp  ui.hpp
src/: board.cpp  cli.cpp  main.cpp  timer.cpp  ui.cpp
